--- a/BuildEventer/BuildEventer/MainWindow.xaml
+++ b/BuildEventer/BuildEventer/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:BuildEventer.Views"
-        Title="MainWindow"
+        Title="BuildEventer Tool"
         MinHeight="700"
         MinWidth="1200"
         WindowStartupLocation="CenterScreen"
