--- a/BuildEventer/BuildEventer/MainWindow.xaml
+++ b/BuildEventer/BuildEventer/MainWindow.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="BuildEventer.MainWindow"
+﻿<Controls:MetroWindow x:Class="BuildEventer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:BuildEventer.Views"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         Title="BuildEventer Tool"
         MinHeight="700"
         MinWidth="1200"
@@ -12,7 +13,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+        <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Background="Gainsboro">
             <MenuItem Header="_File">
                 <MenuItem Header="_Generate Configuration File" Command="{Binding GenerateXMLCommand}"/>
                 <MenuItem Header="_Load Configuration File" Command="{Binding LoadXMLCommand}"/>
@@ -34,4 +35,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</Controls:MetroWindow>
