--- a/BuildEventer/BuildEventer/UI/ConfirmActionName/ConfirmActionNameWindow.xaml
+++ b/BuildEventer/BuildEventer/UI/ConfirmActionName/ConfirmActionNameWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="BuildEventer.UI.ConfirmActionName.ConfirmActionNameWindow"
+﻿<Controls:MetroWindow x:Class="BuildEventer.UI.ConfirmActionName.ConfirmActionNameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:local="clr-namespace:BuildEventer.UI.ConfirmActionName"
         xmlns:behaviors="clr-namespace:BuildEventer.Behaviors"
         behaviors:CommonBehavior.DialogResult="{Binding DialogResult}"
@@ -29,11 +30,19 @@
                    Foreground="Red"
                    Content="{Binding ElementName=txtNewName, Path=(Validation.Errors).CurrentItem.ErrorContent}"/>
         </StackPanel>
-        
+
         <WrapPanel Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
-            <Button IsCancel="True" Width="60" Margin="0,0,30,0" Content="_Cancel"/>
-            <Button IsDefault="True" Width="60" Margin="0,0,30,0" Content="_Default" Command="{Binding DefaultCommand}"/>
-            <Button IsDefault="True" Width="60" Content="_Ok" Command="{Binding NewNameCommand}"/> 
+            <Button IsCancel="True" Width="60" Height="25" Margin="0,0,30,0"
+                    Style="{StaticResource ButtonStyle}"
+                    Content="Cancel"/>
+            <Button IsDefault="True" Width="60" Height="25" Margin="0,0,30,0"
+                    Style="{StaticResource ButtonStyle}"
+                    Content="Default"
+                    Command="{Binding DefaultCommand}"/>
+            <Button IsDefault="True" Width="60" Height="25"
+                    Style="{StaticResource ButtonStyle}"
+                    Content="Ok"
+                    Command="{Binding NewNameCommand}"/>
         </WrapPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
