--- a/BuildEventer/BuildEventer/UI/ExplorerWindow/ExplorerWindow.xaml
+++ b/BuildEventer/BuildEventer/UI/ExplorerWindow/ExplorerWindow.xaml
@@ -1,11 +1,43 @@
-﻿<Window x:Class="BuildEventer.UI.ExplorerWindow"
+﻿<Controls:MetroWindow x:Class="BuildEventer.UI.ExplorerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:BuildEventer.UI"
         xmlns:converter="clr-namespace:BuildEventer.Converters"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:behaviors="clr-namespace:BuildEventer.Behaviors"
         Title="ExplorerWindow" Height="500" Width="400"
+        Background="White"
+        WindowStartupLocation="CenterScreen"
         behaviors:CommonBehavior.LoadedCommand ="{Binding LoadedCommand}">
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border CornerRadius="4" Background="{TemplateBinding Background}">
+                            <Grid>
+                                <ContentPresenter x:Name="MyContentPresenter" Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" />
+                            </Grid>
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#E59400" />
+                                <Setter Property="Foreground" Value="White" />
+                            </Trigger>
+
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="Orange" />
+                                <Setter Property="Foreground" Value="White" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -13,9 +45,9 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <GroupBox Header="Selected Path:" FontWeight="Bold">
-            <TextBlock x:Name="SelectedPath" Text="{Binding SelectedPath}" Foreground="Blue" FontWeight="Bold" Margin="5"/>
+            <TextBlock x:Name="SelectedPath" Text="{Binding SelectedPath}" Foreground="Blue" FontWeight="Bold" Margin="5,0,5,0"/>
         </GroupBox>
-        <TreeView x:Name="tvExplorer" Grid.Row="1" Width="Auto" Background="#FFFFFFFF" BorderBrush="#FFFFFFFF" Foreground="#FFFFFFFF"
+        <TreeView x:Name="tvExplorer" Grid.Row="1" Width="Auto" Background="FloralWhite" BorderBrush="#FFFFFFFF" Foreground="#FFFFFFFF"
                   ItemsSource="{Binding WorkingDirectory}"
                   behaviors:TreeViewHelper.SelectedItem="{Binding SelectedItem}"
                   behaviors:TreeViewHelper.SelectedItemChanged="{Binding SelectedItemChangedCommand}">
@@ -37,12 +69,12 @@
                 </Style>
             </TreeView.Resources>
         </TreeView>
-        <WrapPanel Grid.Row="2" HorizontalAlignment="Right" Margin="0,15,0,0">
-            <Button IsCancel="True" Width="60" Margin="0,0,30,0"
-                    Content="_Cancel"/>
-            <Button IsDefault="True" Width="60" Margin="0,0,10,0"
-                    Content="_Ok"
+        <WrapPanel Grid.Row="2" HorizontalAlignment="Right" Margin="0,5,0,5">
+            <Button IsCancel="True" Width="80" Height="30" Margin="0,0,30,0"
+                    Content="Cancel"/>
+            <Button IsDefault="True" Width="80" Height="30" Margin="0,0,10,0"
+                    Content="Ok"
                     Click="ButtonOK_Click"/>
         </WrapPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
