--- a/BuildEventer/BuildEventer/Views/WorkingDirectoryView.xaml
+++ b/BuildEventer/BuildEventer/Views/WorkingDirectoryView.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="BuildEventer.Views.WorkingDirectoryView"
+﻿<Controls:MetroContentControl x:Class="BuildEventer.Views.WorkingDirectoryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:BuildEventer.ViewModels"
+             xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:behaviors="clr-namespace:BuildEventer.Behaviors"
-             xmlns:converter="clr-namespace:BuildEventer.Converters"
-             behaviors:CommonBehavior.LoadedCommand ="{Binding TreeViewLoadedCommand}"
-             behaviors:MouseBehavior.MouseMoveCommand="{Binding MouseMoveCommand}">
+             xmlns:converter="clr-namespace:BuildEventer.Converters">
     <Grid MinHeight="600">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -15,28 +14,26 @@
         </Grid.RowDefinitions>
         <GroupBox Grid.Row="1" Header="Working Directory" FontWeight="Bold">
             <TreeView x:Name="tvExplorer" MinWidth="400" Background="#FFFFFFFF" BorderBrush="#FFFFFFFF" Foreground="#FFFFFFFF"
-                  ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                  ItemsSource="{Binding WorkingDirectoryTreeViewItems}"
-                  behaviors:TreeViewHelper.SelectedItem="{Binding SelectedItem}"
-                  behaviors:TreeViewHelper.SelectedItemChanged="{Binding SelectedItemChangedCommand}">
-                <TreeView.Resources>
-                    <Style TargetType="{x:Type TreeViewItem}">
-                        <Setter Property="HeaderTemplate">
-                            <Setter.Value>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Name="img"  Width="20" Height="20" Stretch="Fill" 
-                                       Source="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}}, 
-                                                        Path=Tag, 
-                                                        Converter={converter:HeaderToImageConverter}}"/>
-                                        <TextBlock Text="{Binding}" Margin="5,0" />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </Setter.Value>
-                        </Setter>
+                      ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                      ItemsSource="{Binding WorkingDirectoryItems}">
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding Items}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Name="img" Width="20" Height="20" Stretch="Fill"
+                                   Source="{Binding Path=Data.FullPath, Converter={converter:HeaderToImageConverter}}"/>
+                            <TextBlock Text="{Binding Path=Data.Path}" Margin="5,0" />
+                            <i:Interaction.Behaviors>
+                                <behaviors:FrameworkElementDragBehavior/>
+                            </i:Interaction.Behaviors>
+                        </StackPanel>
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+                <TreeView.ItemContainerStyle>
+                    <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource MetroTreeViewItem}">
+                        <Setter Property="IsExpanded" Value="{Binding Path=IsExpanded, Mode=TwoWay}"/>
                     </Style>
-                </TreeView.Resources>
+                </TreeView.ItemContainerStyle>
             </TreeView>
         </GroupBox>
     </Grid>
-</UserControl>
+</Controls:MetroContentControl>
