--- a/BuildEventer/BuildEventer/Views/CopyAction/ActionSourcesView.xaml
+++ b/BuildEventer/BuildEventer/Views/CopyAction/ActionSourcesView.xaml
@@ -22,6 +22,9 @@
                           ItemsSource="{Binding Sources, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                           SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                           SelectedItem="{Binding SelectedItem}">
+            <ListView.InputBindings>
+                <KeyBinding Key="Delete" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}, Path=DataContext.DeleteSelectedItemCommand}"/>
+            </ListView.InputBindings>
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenuSources}" />
